--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       		<div>
 				<h3> See my list of live projects here ... </h3>
 				<ul>
-					<li><a href="https://junify.ukayef.com>jUnify</a></li>
-					<li><a href="https://ijunify.ukayef.com>ijunify</a></li>
+					<li><a href="https://junify.ukayef.com">jUnify</a></li>
+					<li><a href="https://ijunify.ukayef.com">ijunify</a></li>
 				</ul>
 			</div>
     	</div>
