--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 		<title>Main Page</title>
   	</head>
   	<body>
-    	<div>
-      		<h1>Welcome to my projects page!</h1>
-      		<div>
+    	<h2 class='headline'>Welcome to my projects page!</h2> <div class='wrap-content'>
+      		
+      		<div class='main-content'>
 				<h3> See my list of live projects here ... </h3>
 				<ul>
 					<li><a href="https://junify.ukayef.com">jUnify</a></li>
@@ -13,6 +13,6 @@
 				</ul>
 			</div>
     	</div>
-		<link rel="stylesheet/css" href="styles.css">
+		<link rel="stylesheet" href="./styles.css">
 	</body>
 </html>
