--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 		<title>Main Page</title>
   	</head>
   	<body>
-		<h2 class='headline'><a href=https://ukayef.com"><img src="reverseY.png" height=32px></img></a>Welcome to my projects page!</h2> <div class='wrap-content'>
-      		
-      		<div class='main-content'>
+		<div class='headline' height=32px><a href=https://ukayef.com"><img src="reverseY.png" height=32px></img></a><h2>Welcome to my projects page!</h2></div>
+		<div class='main-content'>
 				<h3> See my list of live projects here ... </h3>
 				<ul>
 					<li><a href="https://junify.ukayef.com">jUnify</a></li>
