--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 		<title>Main Page</title>
   	</head>
   	<body>
-		<div class='headline' height=32px><a href=https://ukayef.com"><img src="reverseY.png" height=32px></img></a><h2>Welcome to my projects page!</h2></div>
+		<h2 class='headline'>
+			<a href=https://ukayef.com"><img src="reverseY.png" height=32px></img></a>
+			Welcome to my projects page!
+		</h2> 
+		<div class='wrap-content'>
 		<div class='main-content'>
 				<h3> See my list of live projects here ... </h3>
 				<ul>
