--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	</head>
   	<body>
 		<h2 class='headline'>
-			<a href=https://www.ukayef.com"><img src="reverseY.png" height=32px></img></a>
+			<a href="https://www.ukayef.com"><img src="reverseY.png" height=32px></img></a>
 			Welcome to my projects page!
 		</h2> 
 		<div class='wrap-content'>
