--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 		<div class='wrap-content'>
 		<div class='main-content'>
 				<h3> See my list of live projects here ... </h3>
-				<ul>
-					<li><a href="https://junify.ukayef.com">jUnify</a></li>
-					<li><a href="https://ijunify.ukayef.com">ijunify</a></li>
-					<li><a href="https://4rf.ukayef.com">Vorerfassung</a></li>
-					<li><a href="https://post.ukayef.com">Postversand</a></li>
-				</ul>
+				<table>
+					<tr> <th>Site</th><th>Repo</th></tr>
+					<tr> <td><a href="https://junify.ukayef.com">jUnify</a></td> <td><a href="https://github.com/UKayeF/jUnify">GitHub</a></td> </tr>
+					<tr> <td><a href="https://ijunify.ukayef.com">ijnify</a></td> <td><a href="https://github.com/UKayeF/ijunify">GitHub</a></td> </tr>
+					<tr> <td><a href="https://4rf.ukayef.com">Vorerfassung</a></td> <td><a href="https://github.com/UKayeF/UKayeF.github.io">GitHub</a></td> </tr>
+					<tr> <td><a href="https://post.ukayef.com">Postversand</a></td> <td><a href="https://github.com/UKayeF/post">GitHub</a></td> </tr>
+				</table>		
 			</div>
     	</div>
 		<link rel="stylesheet" href="./styles.css">
