--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<table>
 					<tr> <th>Site</th><th>Repo</th></tr>
 					<tr> <td><a href="https://junify.ukayef.com">jUnify</a></td> <td><a href="https://github.com/UKayeF/jUnify">GitHub</a></td> </tr>
-					<tr> <td><a href="https://ijunify.ukayef.com">ijnify</a></td> <td><a href="https://github.com/UKayeF/ijunify">GitHub</a></td> </tr>
+					<tr> <td><a href="https://ijunify.ukayef.com">ijunify</a></td> <td><a href="https://github.com/UKayeF/ijunify">GitHub</a></td> </tr>
 					<tr> <td><a href="https://4rf.ukayef.com">Vorerfassung</a></td> <td><a href="https://github.com/UKayeF/UKayeF.github.io">GitHub</a></td> </tr>
 					<tr> <td><a href="https://post.ukayef.com">Postversand</a></td> <td><a href="https://github.com/UKayeF/post">GitHub</a></td> </tr>
 				</table>		
