--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
     	</div>
 		<link rel="stylesheet" href="./styles.css">
 	</body>
-	https://github.com/UKayeF/MainPage
+	<a href="https://github.com/UKayeF/MainPage">GitHub</a>
 </html>
