--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</table>		
 			</div>
     	</div>
-	<p><script>alert(document.lastModified)</script></p>
+	<p><script>this.innerHTML = document.lastModified</script></p>
 		<link rel="stylesheet" href="./styles.css">
 	</body>
 	<a href="https://github.com/UKayeF/MainPage">GitHub</a>
