--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				</table>		
 			</div>
     	</div>
-	<p><script>this.innerHTML = document.lastModified</script></p>
+	<p><script>document.write("This page was last modified on: " + document.lastModified +"");</script></p>
 		<link rel="stylesheet" href="./styles.css">
 	</body>
 	<!-- href="https://github.com/UKayeF/MainPage" -->
